added GET generate-presigned-url handler
